# Rolodex

./: .gitignore  TODO.md
crm_ingest/: .env.example  .gitignore  README.md  pyproject.toml  telegram_bot.py
crm_ingest/crm_ingest/: __init__.py  cli.py  config.py  display.py  models.py  pipeline.py
crm_ingest/crm_ingest/modules/: __init__.py  cleaner.py  extractor.py  interaction_logger.py  linkedin_finder.py  matcher.py  proposer.py  thanks_drafter.py  transcriber.py
crm_ingest/crm_ingest/sheets/: __init__.py  client.py  interactions.py  people.py  review_queue.py
